--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,30 @@
 	    <artifactId>selenium-java</artifactId>
 	    <version>3.3.1</version>
 	</dependency>
-	    
+	
+	
+	<!-- We need to implement three dependencies of log4j 2. Start-->
+	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+	<dependency>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-core</artifactId>
+	    <version>2.8.2</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
+	<dependency>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-api</artifactId>
+	    <version>2.8.2</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl-->
+	<dependency>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-slf4j-impl</artifactId>
+	    <version>2.8.2</version>
+	    <scope>test</scope>
+	</dependency> 
+	<!-- We need to implement three dependencies of log4j 2.  End-->
+
+	
   </dependencies>
 </project>
